play button IE positioning fix

--- a/css/style.css
+++ b/css/style.css
@@ -1088,7 +1088,7 @@ input.subscribe-form__input {
       padding: 0;
      }
 
-     .video__link {
-      margin: 153px auto;
+     .video-btn {
+      margin: 198px auto;
      }
 }
